--- a/dlg_price.ui
+++ b/dlg_price.ui
@@ -95,7 +95,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="btn_add_asph">
+  <widget class="QPushButton" name="btnAddAsph">
    <property name="geometry">
     <rect>
      <x>450</x>
@@ -137,7 +137,7 @@
   <widget class="QListWidget" name="listPrice">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>20</x>
      <y>20</y>
      <width>256</width>
      <height>192</height>
