--- a/main_window.ui
+++ b/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
-    <height>406</height>
+    <width>434</width>
+    <height>415</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,37 +27,37 @@
      <string>Прайс</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="btnAsph">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>20</y>
-      <width>75</width>
+      <x>30</x>
+      <y>60</y>
+      <width>111</width>
       <height>24</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Список покрытий</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>30</y>
+      <x>30</x>
+      <y>110</y>
       <width>75</width>
       <height>24</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Расчет</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>190</y>
+      <x>30</x>
+      <y>160</y>
       <width>75</width>
       <height>24</height>
      </rect>
@@ -72,7 +72,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>430</width>
+     <width>434</width>
      <height>22</height>
     </rect>
    </property>
