--- a/main_window.ui
+++ b/main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>211</width>
-    <height>241</height>
+    <height>170</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <rect>
       <x>30</x>
       <y>20</y>
-      <width>75</width>
+      <width>161</width>
       <height>24</height>
      </rect>
     </property>
@@ -32,7 +32,7 @@
      <rect>
       <x>30</x>
       <y>60</y>
-      <width>111</width>
+      <width>161</width>
       <height>24</height>
      </rect>
     </property>
@@ -40,30 +40,17 @@
      <string>Список покрытий</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="btnCalc">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>110</y>
-      <width>75</width>
+      <y>100</y>
+      <width>161</width>
       <height>24</height>
      </rect>
     </property>
     <property name="text">
      <string>Расчет</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_4">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>160</y>
-      <width>75</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
     </property>
    </widget>
   </widget>
