--- a/ui/dialogs/dlg_add_clm.ui
+++ b/ui/dialogs/dlg_add_clm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>260</width>
-    <height>110</height>
+    <width>612</width>
+    <height>146</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,6 +47,29 @@
    </property>
    <property name="text">
     <string>Добавить</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnDel">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>20</y>
+     <width>111</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Удалить</string>
+   </property>
+  </widget>
+  <widget class="QListWidget" name="lstClm">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>10</y>
+     <width>231</width>
+     <height>111</height>
+    </rect>
    </property>
   </widget>
  </widget>
