--- a/ui/dialogs/main_window.ui
+++ b/ui/dialogs/main_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Калькулятор</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="btnPrice">
@@ -60,7 +60,7 @@
      <x>0</x>
      <y>0</y>
      <width>211</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
